# kakao_interview

./: .gitignore  README.md  demo.ipynb  demo.py  problem_1.ipynb  problem_1.py  problem_2.py  problem_2.sql  problem_3.html  problem_3.ipynb  pyproject.toml
kakao_interview/: README.md  problem_1.py  problem_2.ipynb  problem_3.ipynb  problem_3.py
kakao_interview/result/: problem_1.html  problem_3.html
leetcode/: Flatten_Binary_Tree_to_Linked_List.cpp  Flatten_a_Multilevel_Doubly_Linked_List.cpp
result/: report.html
