[tool.poetry]
name = "kakao_interview"
version = "0.1.0"
description = ""
authors = ["Jongkook Choi"]

[tool.poetry.dependencies]
python = "3.9.0"
shap = "^0.37.0"
jupyter = "^1.0.0"
tensorflow = "^2.3.1"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
